Did some style fixes.